--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prepare": "husky install",
     "screenshots": "node scripts/screenshots.ts",
-    "icons": "node scripts/rasterize-icons.ts",
+    "icons": "node scripts/rasterize-icons.js",
     "build:ios": "eas build --platform ios --profile ios:production",
     "build:android": "eas build --platform android --profile android:production",
     "submit:ios": "eas submit --platform ios --profile ios:production",
@@ -31,29 +31,38 @@
     "@expo/vector-icons": "^14.0.0",
     "@maplibre/maplibre-react-native": "^10.0.11",
     "@nozbe/watermelondb": "^0.24.0",
+    "@nozbe/with-observables": "^1.6.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "cbor": "^9.0.2",
     "expo": "~50.0.0",
+    "expo-application": "~5.8.4",
     "expo-av": "~13.4.1",
+    "expo-background-fetch": "~11.8.1",
     "expo-battery": "~7.4.0",
-    "expo-camera": "~14.1.0",
-    "expo-contacts": "~12.3.0",
+    "expo-camera": "~14.1.3",
+    "expo-contacts": "~12.8.2",
+    "expo-crypto": "~12.8.1",
     "expo-device": "~5.9.0",
     "expo-image-manipulator": "~11.4.0",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "~14.7.1",
+    "expo-localization": "~14.8.4",
     "expo-location": "~16.5.5",
-    "expo-sensors": "~12.6.0",
+    "expo-notifications": "~0.27.8",
+    "expo-sensors": "~12.9.1",
     "expo-sharing": "~11.8.0",
+    "expo-sms": "~11.7.1",
+    "expo-status-bar": "~1.11.1",
     "expo-task-manager": "~11.6.0",
-    "i18next": "^23.7.6",
+    "i18next": "^23.16.8",
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.73.6",
     "react-native-device-info": "^10.11.0",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.6.2",
@@ -75,7 +84,9 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.54.0",
+    "eslint-config-expo": "^10.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
@@ -85,15 +96,6 @@
     "metro-react-native-babel-preset": "0.77.0",
     "prettier": "^3.1.0",
     "typescript": "^5.1.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.js"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
