--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "expo-application": "~5.8.4",
     "expo-av": "~13.4.1",
     "expo-background-fetch": "~11.8.1",
-    "expo-battery": "~7.4.0",
     "expo-camera": "~14.1.3",
     "expo-contacts": "~12.8.2",
     "expo-crypto": "~12.8.1",
+    "expo-dev-client": "^6.0.13",
     "expo-device": "~5.9.0",
     "expo-image-manipulator": "~11.4.0",
     "expo-image-picker": "~14.7.1",
