--- a/package.json
+++ b/package.json
@@ -1,85 +1,57 @@
 {
-  "name": "afetnet",
+  "name": "afetnet-backend",
   "version": "1.0.0",
-  "private": true,
-  "main": "index.ts",
+  "description": "AfetNet Backend API",
+  "main": "backend/dist/index.js",
   "scripts": {
-    "start": "expo start --port 8083",
-    "start:clean": "expo start -c --port 8083",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --cache",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "build": "cd backend && npm install && npx prisma generate && npm run build",
+    "start": "cd backend && npm start",
+    "dev": "cd backend && npm run dev"
   },
+  "keywords": ["afetnet", "backend", "api"],
+  "author": "AfetNet Team",
+  "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/runtime": "^7.28.4",
-    "@expo/vector-icons": "^15.0.2",
-    "@hookform/resolvers": "^5.2.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.8",
-    "@react-navigation/native": "^7.1.18",
-    "@stripe/stripe-react-native": "^0.50.3",
-    "buffer": "^6.0.3",
-    "crc-32": "^1.2.2",
+    "@prisma/client": "^6.17.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "expo": "^54.0.12",
-    "expo-av": "~16.0.7",
-    "expo-background-fetch": "~14.0.7",
-    "expo-barcode-scanner": "^13.0.1",
-    "expo-battery": "~10.0.7",
-    "expo-brightness": "~14.0.7",
-    "expo-camera": "~17.0.8",
-    "expo-clipboard": "~8.0.7",
-    "expo-contacts": "~15.0.9",
-    "expo-crypto": "~15.0.7",
-    "expo-device": "~8.0.9",
-    "expo-document-picker": "~14.0.7",
-    "expo-file-system": "~19.0.16",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-intent-launcher": "~13.0.7",
-    "expo-localization": "~17.0.7",
-    "expo-location": "~19.0.7",
-    "expo-media-library": "~18.2.0",
-    "expo-notifications": "~0.32.12",
-    "expo-secure-store": "~15.0.7",
-    "expo-sensors": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-sms": "~14.0.7",
-    "expo-speech": "~14.0.7",
-    "expo-task-manager": "~14.0.7",
-    "i18next": "^25.5.3",
-    "jszip": "^3.10.1",
-    "pako": "^2.1.0",
-    "react": "19.1.0",
-    "react-hook-form": "^7.64.0",
-    "react-i18next": "^16.0.0",
-    "react-native": "0.81.4",
-    "react-native-ble-plx": "^3.5.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-get-random-values": "~1.11.0",
-    "react-native-maps": "1.20.1",
-    "react-native-pager-view": "6.9.1",
-    "react-native-purchases": "^9.5.3",
-    "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-tab-view": "^4.1.3",
-    "scrypt-js": "^3.0.1",
-    "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1",
-    "zod": "^4.1.11",
-    "zustand": "^5.0.8"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-request-id": "^3.0.0",
+    "express-validator": "^7.2.1",
+    "firebase-admin": "^13.5.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
+    "opossum": "^9.0.0",
+    "prisma": "^6.17.0",
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.8.1",
+    "stripe": "^19.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "@types/node": "^20.19.19",
-    "@types/react": "^19.1.10",
-    "babel-preset-expo": "^54.0.3",
-    "typescript": "^5.4.5"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.7.0",
+    "@types/opossum": "^8.1.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
