--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: frankfurt
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npx prisma generate && npx prisma db push && npm run build
     startCommand: npm start
     healthCheckPath: /health
     envVars:
