--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AfetNet Backend API",
   "main": "backend/dist/index.js",
   "scripts": {
-    "build": "cd backend && npm install && npx prisma generate && npm run build",
+    "build": "cd backend && npm install && npx prisma generate && npx prisma db push && npm run build",
     "start": "cd backend && npm start",
     "dev": "cd backend && npm run dev"
   },
