--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,6 +5,7 @@ services:
     env: node
     region: frankfurt
     plan: free
+    rootDir: backend
     buildCommand: npm install && npm run build && npx prisma migrate deploy
     startCommand: npm start
     healthCheckPath: /health
