--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -6,7 +6,7 @@ services:
     region: frankfurt
     plan: free
     rootDir: backend
-    buildCommand: npm install && npm run build && npx prisma migrate deploy
+    buildCommand: npm install && npx tsc --skipLibCheck && npx prisma generate && npx prisma migrate deploy
     startCommand: npm start
     healthCheckPath: /health
     envVars:
