🍎 ELITE: Apple Store hazırlığı - kritik hatalar düzeltildi

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "afetnet",
   "version": "1.0.0",
+  "type": "module",
   "description": "AfetNet - Emergency Communication App",
   "main": "index.ts",
   "scripts": {
