--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@sentry/react-native": "^7.3.0",
-    "@stripe/stripe-react-native": "0.50.3",
     "@types/node": "^24.7.1",
     "buffer": "^6.0.3",
     "crc-32": "^1.2.2",
@@ -77,6 +76,7 @@
     "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-iap": "^14.4.16",
     "react-native-maps": "^1.26.14",
     "react-native-multipeer": "^0.1.1",
     "react-native-pager-view": "6.9.1",
