--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "firebase-admin": "^12.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
