--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "../",
+    "rootDir": ".",
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../shared/*"]
@@ -19,8 +19,7 @@
     "sourceMap": true
   },
   "include": [
-    "*.ts",
-    "../shared/**/*"
+    "*.ts"
   ],
   "exclude": [
     "node_modules",
