--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,52 @@
-# Expo defaults
-.expo/
-.expo-shared/
-node_modules/
-dist/
-build/
-web-build/
-# OS
+# OSX
 .DS_Store
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-# Env
-.env
-.env.*
-# EAS
-*.jks
-*.p8
-*.p12
-*.mobileprovision
-*.keystore
-# Xcode/Gradle (if later added)
-ios/
-android/
+
+# Xcode
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+*.xcworkspace/*
+!*.xcworkspace/contents.xcworkspacedata
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+*.xcuserstate
+DerivedData/
+xcuserdata/
+.hmap
+*.ipa
+
+# CocoaPods
+Pods/
+*.xcworkspace
+!default.xcworkspace
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Environment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary files
+*.log
+*.tmp
+
