chore(ci): sync lockfile, upgrade to Node 20, fix TypeScript errors
- Sync package-lock.json with dependencies
- Upgrade CI workflows to Node 20 with npm cache
- Add npm ci || npm install fallback for robustness
- Fix TypeScript errors in notifications, revenuecat, and premium hooks
- Add lint and typecheck scripts to package.json

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "test:iap": "node scripts/test-iap.js",
     "verify:iap": "node scripts/verify-iap-system.js",
     "validate:production": "node scripts/validate-production.js",
+    "lint": "eslint .",
+    "typecheck": "tsc -p tsconfig.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
