--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
     branches: [ main, develop ]
   workflow_dispatch:
 
+concurrency: ci-${{ github.ref }}
+
 jobs:
   # Code Quality Checks
   code-quality-and-linting:
