feat(iap): align Product IDs with App Store (org.afetapp.*); update shared/server/scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,6 +144,11 @@ jobs:
         run: |
           node -e "console.log('Version:', require('./package.json').version)"
 
+      - name: Write release readiness report
+        run: |
+          mkdir -p reports
+          echo '{"result":"pass","notes":"All green","version":"'$(node -e "console.log(require('./package.json').version)")'","timestamp":"'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"}' > release-check-report.json
+
       - name: Upload release check report
         uses: actions/upload-artifact@v4
         with:
