fix(ios): add background-fetch to Release entitlements
- Release entitlements now matches Debug (background-fetch included)
- Added comprehensive manual certificate guide for Xcode signing

--- a/ios/AfetNet/AfetNetRelease.entitlements
+++ b/ios/AfetNet/AfetNetRelease.entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>applinks:afetnet.app</string>
 	</array>
+	<key>com.apple.developer.background-fetch</key>
+	<true/>
 	<key>com.apple.developer.bluetooth-central</key>
 	<true/>
 	<key>com.apple.developer.bluetooth-peripheral</key>
