fix(ios): correct Release aps-environment and remove invalid location.push
- Set Release aps-environment to production (was development)
- Remove com.apple.developer.location.push (not a valid app entitlement)
- Add Bluetooth usage descriptions to Info.plist

--- a/ios/AfetNet/Info.plist
+++ b/ios/AfetNet/Info.plist
@@ -60,7 +60,9 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string></string>
+	<string>AfetNet, acil durumlarda mesh ağ iletişimi için Bluetooth kullanır.</string>
+	<key>NSBluetoothWhileInUseUsageDescription</key>
+	<string>AfetNet, acil durumlarda mesh ağ iletişimi için Bluetooth kullanır.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>AfetNet, QR kodları okumak için kameraya erişir.</string>
 	<key>NSContactsUsageDescription</key>
