--- a/ios/AfetNet/Info.plist
+++ b/ios/AfetNet/Info.plist
@@ -60,21 +60,21 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>AfetNet, acil durumlarda mesh ağ iletişimi için Bluetooth kullanır.</string>
+	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurmak ve afet anında çevrimdışı mesajlaşmayı sağlamak için Bluetooth'u kullanır.</string>
 	<key>NSBluetoothWhileInUseUsageDescription</key>
-	<string>AfetNet, acil durumlarda mesh ağ iletişimi için Bluetooth kullanır.</string>
+	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurarak afet anında çevrimdışı mesajlaşmayı sağlamak için Bluetooth’u kullanır.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>AfetNet, QR kodları okumak için kameraya erişir.</string>
+	<string>AfetNet, QR kodları okumak ve görsel rapor oluşturmak için kamerayı kullanır.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Allow $(PRODUCT_NAME) to access your contacts</string>
+	<string>AfetNet, acil durumlarda aile bireylerinizin veya arkadaşlarınızın iletişim bilgilerini görüntülemek için rehbere erişim ister.</string>
 	<key>NSFaceIDUsageDescription</key>
-	<string>Allow $(PRODUCT_NAME) to access your Face ID biometric data.</string>
+	<string>AfetNet, güvenli oturum açma ve kimlik doğrulama için Face ID kullanır.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>AfetNet, aile üyelerinizin gerçek zamanlı konumunu takip etmek için arka planda konum erişimi gerektirir.</string>
+	<string>AfetNet, acil durumlarda aile üyelerinizin konumunu takip edebilmek ve yardım çağrıları gönderebilmek için konum erişimine ihtiyaç duyar.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>AfetNet, aile üyelerinizin gerçek zamanlı konumunu takip etmek için arka planda konum erişimi gerektirir.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>AfetNet, acil durum sesli yönlendirme vermek için mikrofon kullanır.</string>
+	<string>AfetNet, acil durumlarda sesli yönlendirme ve yardım çağrıları için mikrofonu kullanır.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>AfetNet, deprem sarsıntısını algılayarak erken uyarı vermek için hareket sensörlerini kullanır.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
@@ -90,7 +90,6 @@
 		<string>processing</string>
 		<string>location</string>
 		<string>bluetooth-central</string>
-		<string>bluetooth-peripheral</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
