--- a/ios/AfetNet/AfetNetDebug.entitlements
+++ b/ios/AfetNet/AfetNetDebug.entitlements
@@ -12,6 +12,8 @@
 	<true/>
 	<key>com.apple.developer.bluetooth-central</key>
 	<true/>
+	<key>com.apple.developer.bluetooth-peripheral</key>
+	<true/>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
 		<string>merchant.com.gokhancamci.afetnetapp</string>
