--- a/ios/AfetNet/Info.plist
+++ b/ios/AfetNet/Info.plist
@@ -60,9 +60,11 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurmak ve afet anında çevrimdışı mesajlaşmayı sağlamak için Bluetooth'u kullanır.</string>
+	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurmak ve afet anında çevrimdışı mesh ağ iletişimi sağlamak için Bluetooth'u kullanır.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>AfetNet, mesh ağ iletişimi için Bluetooth LE advertising (yayın) yaparak yakındaki cihazların sizi bulmasını sağlar.</string>
 	<key>NSBluetoothWhileInUseUsageDescription</key>
-	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurarak afet anında çevrimdışı mesajlaşmayı sağlamak için Bluetooth’u kullanır.</string>
+	<string>AfetNet, yakınınızdaki cihazlarla iletişim kurarak afet anında çevrimdışı mesh ağ iletişimi sağlamak için Bluetooth'u kullanır.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>AfetNet, QR kodları okumak ve görsel rapor oluşturmak için kamerayı kullanır.</string>
 	<key>NSContactsUsageDescription</key>
@@ -90,6 +92,7 @@
 		<string>processing</string>
 		<string>location</string>
 		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
