--- a/.github/workflows/ci_rules_lint_test.yml
+++ b/.github/workflows/ci_rules_lint_test.yml
@@ -18,7 +18,14 @@ jobs:
               echo "::error::Mandatory file missing: $f"; exit 1; fi
           done
           # forbidden patterns
-          if git grep -n "console\.log\|debugPrint" -- . ':!node_modules' ':!Pods' ':!ios/build' ':!android/build'; then
+          if git grep -nE "console\\.log\(|debugPrint\(" -- \
+            'src/**/*' \
+            'app/**/*' \
+            'App.tsx' \
+            ':!src/utils/productionLogger.ts' \
+            ':!**/*.test.*' \
+            ':!**/__tests__/**' \
+            ':!node_modules' ':!Pods' ':!ios/build' ':!android/build'; then
             echo "::error::Forbidden debug logging detected (console.log/debugPrint)."; exit 1;
           fi
           echo "✅ Rules & Secrets Guard passed"
