--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "expo-haptics": "~15.0.7",
     "expo-in-app-purchases": "^14.5.0",
     "expo-intent-launcher": "~13.0.7",
+    "expo-linear-gradient": "^15.0.7",
     "expo-localization": "~17.0.7",
     "expo-location": "~19.0.7",
     "expo-maps": "^0.12.8",
