--- a/firebase.json
+++ b/firebase.json
@@ -3,9 +3,12 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "storage": {
-    "rules": "storage.rules"
-  },
+  "storage": [
+    {
+      "bucket": "afetnet-4a6b6.appspot.com",
+      "rules": "storage.rules"
+    }
+  ],
   "hosting": {
     "public": "public",
     "ignore": [
