--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "react-native-tcp-socket": "^6.0.6",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "scrypt-js": "^3.0.1",
     "stream-browserify": "^3.0.0",
