--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "expo-sms": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-task-manager": "~14.0.8",
+    "expo-web-browser": "~15.0.9",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "hash.js": "^1.1.7",
@@ -116,6 +117,7 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-quick-sqlite": "^8.0.1",
     "react-native-reanimated": "~4.1.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
