feat: Add ORG_SECRET to environment variables and update EAS build config
- Add ORG_SECRET to app.config.ts extra section
- Add ORG_SECRET to eas.json build profiles
- Create .env.example template file
- Update environment variable configuration for all build profiles

--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,65 @@
 # ============================================
-# AFETNET ENVIRONMENT VARIABLES
+# AFETNET - ENVIRONMENT VARIABLES TEMPLATE
 # ============================================
-# IMPORTANT: Never commit .env file to git!
-# Copy this file to .env and fill in your keys
+# Bu dosyayı .env olarak kopyalayın ve değerleri doldurun
+# cp .env.example .env
+# 
+# ÖNEMLİ: .env dosyası .gitignore'da olduğu için GitHub'a yüklenmeyecek
+# API key'lerinizi güvende tutun!
 # ============================================
 
-# OpenAI API Key (REQUIRED for AI features)
-# Get your key from: https://platform.openai.com/api-keys
-EXPO_PUBLIC_OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# ============================================
+# OPENAI API KEY (GÜVENLİ - ASLA GİTHUB'A YÜKLEMEYİN!)
+# ============================================
+# OpenAI API key'inizi buraya ekleyin
+# Expo convention: EXPO_PUBLIC_ prefix kullanılır (client-side için)
+EXPO_PUBLIC_OPENAI_API_KEY=your-openai-api-key-here
 
-# Firebase Configuration (REQUIRED)
-# Get from Firebase Console > Project Settings > General
-FIREBASE_API_KEY=AIzaXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-FIREBASE_PROJECT_ID=your-project-id
+# ============================================
+# REVENUECAT API KEYS (Premium özellikler için)
+# ============================================
+RC_IOS_KEY=your-revenuecat-ios-key-here
+RC_ANDROID_KEY=your-revenuecat-android-key-here
 
-# RevenueCat API Keys (REQUIRED for premium features)
-# Get from RevenueCat Dashboard > API Keys
-RC_IOS_KEY=appl_xxxxxxxxxxxxxxxxxxxxxxxx
-RC_ANDROID_KEY=appl_xxxxxxxxxxxxxxxxxxxxxxxx
+# ============================================
+# FIREBASE CONFIGURATION
+# ============================================
+# Firebase API key (public - client-side kullanım için güvenli)
+FIREBASE_API_KEY=your-firebase-api-key-here
+FIREBASE_PROJECT_ID=your-firebase-project-id-here
 
-# EAS Project ID (Auto-filled by Expo)
-EAS_PROJECT_ID=072f1217-172a-40ce-af23-3fc0ad3f7f09
+# ============================================
+# BACKEND WORKER SECRET (GÜVENLİ - ASLA GİTHUB'A YÜKLEMEYİN!)
+# ============================================
+# Backend push worker için shared secret header
+# Bu secret backend ile eşleşmeli (x-org-secret header)
+ORG_SECRET=your-org-secret-here
 
-# App Configuration
-APP_NAME=AfetNet
-APP_VERSION=1.0.2
-BUNDLE_ID=com.gokhancamci.afetnetapp
+# ============================================
+# EAS BUILD CONFIGURATION
+# ============================================
+EAS_PROJECT_ID=your-eas-project-id-here
 
-# Feature Flags
+# ============================================
+# FEATURE FLAGS
+# ============================================
 EEW_ENABLED=false
 EEW_NATIVE_ALARM=false
 
-# URLs
-PRIVACY_POLICY_URL=https://gokhancamci.github.io/AfetNet1/docs/privacy-policy.html
-TERMS_OF_SERVICE_URL=https://gokhancamci.github.io/AfetNet1/docs/terms-of-service.html
-SUPPORT_EMAIL=support@afetnet.app
-
-# Backend API
+# ============================================
+# API ENDPOINTS
+# ============================================
 API_BASE_URL=https://afetnet-backend.onrender.com
 
-# EEW WebSocket URLs
+# ============================================
+# EEW WEBSOCKET ENDPOINTS
+# ============================================
 EEW_WS_TR_PRIMARY=wss://eew.afad.gov.tr/ws
 EEW_WS_TR_FALLBACK=wss://eew.kandilli.org/ws
 EEW_WS_GLOBAL_PRIMARY=wss://earthquake.usgs.gov/ws/eew
 EEW_PROXY_WS=wss://afetnet-backend.onrender.com/eew
 
-# Map Tiles
+# ============================================
+# MAP TILES
+# ============================================
 MAP_TILE_URL=https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png
