--- a/eas.json
+++ b/eas.json
@@ -10,18 +10,51 @@
       "ios": {
         "simulator": true
       },
-      "node": "20.11.1"
+      "node": "20.11.1",
+      "env": {
+        "EXPO_PUBLIC_OPENAI_API_KEY": "",
+        "RC_IOS_KEY": "",
+        "RC_ANDROID_KEY": "",
+        "FIREBASE_API_KEY": "",
+        "FIREBASE_PROJECT_ID": "",
+        "ORG_SECRET": "",
+        "API_BASE_URL": "https://afetnet-backend.onrender.com",
+        "EEW_ENABLED": "false",
+        "EEW_NATIVE_ALARM": "false"
+      }
     },
     "preview": {
       "distribution": "internal",
-      "node": "20.11.1"
+      "node": "20.11.1",
+      "env": {
+        "EXPO_PUBLIC_OPENAI_API_KEY": "",
+        "RC_IOS_KEY": "",
+        "RC_ANDROID_KEY": "",
+        "FIREBASE_API_KEY": "",
+        "FIREBASE_PROJECT_ID": "",
+        "ORG_SECRET": "",
+        "API_BASE_URL": "https://afetnet-backend.onrender.com",
+        "EEW_ENABLED": "false",
+        "EEW_NATIVE_ALARM": "false"
+      }
     },
     "production": {
       "autoIncrement": true,
       "ios": {
         "simulator": false
       },
-      "node": "20.11.1"
+      "node": "20.11.1",
+      "env": {
+        "EXPO_PUBLIC_OPENAI_API_KEY": "",
+        "RC_IOS_KEY": "",
+        "RC_ANDROID_KEY": "",
+        "FIREBASE_API_KEY": "",
+        "FIREBASE_PROJECT_ID": "",
+        "ORG_SECRET": "",
+        "API_BASE_URL": "https://afetnet-backend.onrender.com",
+        "EEW_ENABLED": "false",
+        "EEW_NATIVE_ALARM": "false"
+      }
     }
   },
   "submit": {
