--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy-migrations",
+    "copy-migrations": "mkdir -p dist/migrations && cp -r src/migrations/* dist/migrations/ 2>/dev/null || true",
     "test": "jest"
   },
   "dependencies": {
