fix: Backend deploy hataları düzeltildi - TypeScript type errors, EMSC API error handling, log spam azaltıldı

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,5 +11,5 @@
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "types": ["node"]
   },
-  "include": ["src/**/*", "src/types/**/*"]
+  "include": ["src/**/*", "src/types/**/*.d.ts"]
 }
