fix: TypeScript type augmentation kesin çözüm - tsconfig.json files array, triple-slash directives eklendi

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,5 +11,12 @@
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "types": ["node"]
   },
-  "include": ["src/**/*", "src/types/**/*.d.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/types/**/*.d.ts"
+  ],
+  "files": [
+    "src/types/shims.d.ts"
+  ]
 }
