feat: Git flow standardization, CI/CD deployment, and Sentry production setup
- Add Git flow standards documentation (.github/GIT_FLOW_STANDARDS.md)
- Add CI/CD deployment workflow (.github/workflows/deploy-backend.yml)
- Add deployment documentation (.github/DEPLOYMENT.md)
- Add Sentry setup guide (.github/SENTRY_SETUP.md)
- Update render.yaml: Enable Sentry in production (SENTRY_ENABLED=true)
- Improve monitoring configuration comments

--- a/render.yaml
+++ b/render.yaml
@@ -49,11 +49,13 @@ services:
         sync: false
         # Not: Deploy sonrası Render URL'i buraya ekleyin: https://afetnet-backend.onrender.com
         
-      # Monitoring (OPSİYONEL)
+      # Monitoring (ZORUNLU - Production'da aktif)
       - key: SENTRY_DSN
         sync: false
+        # Not: Sentry DSN'i buraya ekleyin: https://sentry.io/settings/afetnet/projects/afetnet-backend/keys/
       - key: SENTRY_ENABLED
-        value: "false"
+        value: "true"
+        # Not: Production'da Sentry monitoring aktif olmalı
         
       # Early Earthquake Warning (OPSİYONEL - Default API URL'leri eklendi)
       - key: EEW_PROVIDER_MODE
