--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
-    "@react-native-async-storage/async-storage": "1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
@@ -90,8 +90,7 @@
     "expo-sms": "~14.0.7",
     "expo-speech": "~14.0.7",
     "expo-task-manager": "~14.0.8",
-    "expo-torch": "^0.6.0",
-    "expo-web-browser": "~15.0.9",
+    "expo-web-browser": "^15.0.9",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "hash.js": "^1.1.7",
@@ -126,7 +125,7 @@
     "react-native-tcp-socket": "^6.0.6",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "scrypt-js": "^3.0.1",
     "stream-browserify": "^3.0.0",
