--- a/server/package.json
+++ b/server/package.json
@@ -10,24 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@sentry/node": "^10.22.0",
-    "@sentry/profiling-node": "^10.22.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^8.2.1",
-    "firebase-admin": "^12.6.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "firebase-admin": "^12.6.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
-    "jest": "^29.7.0",
+    "typescript": "^5.3.0",
     "ts-node": "^10.9.0",
-    "typescript": "^5.3.0"
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.8"
   },
   "keywords": [
     "iap",
