fix: Add env config to development build profile

--- a/eas.json
+++ b/eas.json
@@ -9,6 +9,9 @@
       "distribution": "internal",
       "ios": {
         "simulator": true
+      },
+      "env": {
+        "SKIP_BUNDLING": "0"
       }
     },
     "preview": {
