fix: Remove Podfile.lock from git and update .gitignore
- Podfile.lock should not be in git for Expo projects
- EAS build will regenerate it during build
- This fixes CocoaPods dependency resolution issues

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ xcuserdata/
 
 # CocoaPods
 Pods/
+Podfile.lock
 # Note: *.xcworkspace/* is already ignored above, but we need ios/AfetNet.xcworkspace
 # Allow the main workspace file
 !ios/AfetNet.xcworkspace
