--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test:iap": "node scripts/test-iap.js",
     "verify:iap": "node scripts/verify-iap-system.js",
     "validate:production": "node scripts/validate-production.js",
-    "iap:check": "node scripts/verify-revenuecat.js || node scripts/verify-revenuecat.cjs",
-    "pre-submit": "bash scripts/pre_submit_check.sh && npm run iap:check && node scripts/release-check.ts",
+    "pre-submit": "bash scripts/pre_submit_check.sh && npm run validate:production",
     "lint": "eslint .",
     "typecheck": "tsc -p tsconfig.json",
     "test": "jest",
